<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.tnsilver.messaging</groupId>
    <artifactId>protobuf-zmq-demo</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>messaging-demo</name>
    <description>A protocol buffer over ZeroMQ demo</description>
    <packaging>pom</packaging>
    <url>www.silvermania.com</url>

    <developers>
        <developer>
            <id>tnsilver</id>
            <name>T.N.Silverman</name>
            <email>tnsilver@gmail.com</email>
            <organization>Silvermania</organization>
            <roles>
                <role>architect</role>
                <role>developer</role>
            </roles>
            <timezone>-2</timezone>
            <url>www.silvermania.com</url>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git@github.com:tnsilver/protobuf-zmq-demo.git</connection>
        <url>scm:git:git@github.com:tnsilver/protobuf-zmq-demo.git</url>
        <developerConnection>scm:git:git@github.com:tnsilver/protobuf-zmq-demo.git</developerConnection>
    </scm>

    <inceptionYear>2020</inceptionYear>

    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>16</java.version>
        <maven.compiler.version>3.8.1</maven.compiler.version>
        <maven.surefire.version>3.0.0-M5</maven.surefire.version>
        <maven.jxr.plugin.version>3.1.1</maven.jxr.plugin.version>
        <maven.site.plugin.version>3.9.1</maven.site.plugin.version>
        <exec.maven.plugin.version>1.6.0</exec.maven.plugin.version>
        <maven.dependency.plugin.version>3.1.2</maven.dependency.plugin.version>
        <maven.jar.plugin.version>3.2.0</maven.jar.plugin.version>
        <maven.dependency.plugin.version>3.1.2</maven.dependency.plugin.version>
        <protobuf.maven.plugin.version>0.6.1</protobuf.maven.plugin.version>
        <jeromq.version>0.5.2</jeromq.version>
        <jzmq.version>3.1.0</jzmq.version>
        <logback.version>1.3.0-alpha5</logback.version>
        <slf4j.api.version>2.0.0-alpha1</slf4j.api.version>
        <protoc.version>3.11.4</protoc.version>
        <os.maven.plugin.version>1.6.1</os.maven.plugin.version>
        <junit.jupiter.version>5.6.2</junit.jupiter.version>
        <junit.platform.version>1.6.2</junit.platform.version>
        <enable.preview.arg>--enable-preview</enable.preview.arg>
        <TCP>tcp://*:5555</TCP>
        <TCP_5556>tcp://localhost:5556</TCP_5556>
        <TCP_5557>tcp://localhost:5557</TCP_5557>
        <TCP_5558>tcp://localhost:5558</TCP_5558>
        <TCP_5559>tcp://localhost:5559</TCP_5559>
        <INPROC>inproc://%s</INPROC>
        <IPC_DEMO>ipc://demo</IPC_DEMO>
    </properties>

    <modules>
        <module>messaging.util</module>
        <module>messaging.protos</module>
        <module>messaging.server</module>
        <module>messaging.broker</module>
        <module>messaging.client</module>
        <module>messaging.demo</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.api.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>${logback.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.protobuf</groupId>
                <artifactId>protobuf-java-util</artifactId>
                <version>${protoc.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>${junit.jupiter.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-params</artifactId>
                <version>${junit.jupiter.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.platform</groupId>
                <artifactId>junit-platform-runner</artifactId>
                <version>${junit.platform.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <!--common dependencies -->
    <dependencies>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
        </dependency>
        <dependency>
            <groupId>com.google.protobuf</groupId>
            <artifactId>protobuf-java-util</artifactId>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>
                junit-jupiter-engine
            </artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-runner</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>${basedir}/src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>*.properties</include>
                </includes>
            </resource>
            <resource>
                <directory>${basedir}/src/main/resources</directory>
                <filtering>false</filtering>
                <excludes>
                    <exclude>*.properties</exclude>
                </excludes>
            </resource>
        </resources>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven.compiler.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.xolstice.maven.plugins</groupId>
                    <artifactId>protobuf-maven-plugin</artifactId>
                    <version>${protobuf.maven.plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-site-plugin</artifactId>
                    <version>${maven.site.plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jxr-plugin</artifactId>
                    <version>${maven.jxr.plugin.version}</version>
                </plugin>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven.surefire.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-report-plugin</artifactId>
                    <version>${maven.surefire.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>${exec.maven.plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>${maven.dependency.plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.autilpache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>${maven.jar.plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <configuration>
                    <generateReports>false</generateReports>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jxr-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-report-plugin</artifactId>
            </plugin>
        </plugins>
    </reporting>


    <profiles>
        <profile>
            <id>jdk8</id>
            <activation>
                <jdk>1.8</jdk>
            </activation>
            <properties>
                <java.version>1.8</java.version>
                <enable.preview.arg>-ea</enable.preview.arg>
                <maven.compiler.target>1.8</maven.compiler.target>
                <maven.compiler.source>1.8</maven.compiler.source>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <version>2.3.2</version>
                        <configuration>
                            <excludes>
                                <exclude>module-info.java</exclude>
                            </excludes>
                        </configuration>
                    </plugin>
                    <plugin>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <argLine>-ea</argLine>
                            <testFailureIgnore>true</testFailureIgnore>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>jdk9</id>
            <activation>
                <jdk>[9,13)</jdk>
            </activation>
            <properties>
                <java.version>9</java.version>
                <enable.preview.arg>-ea</enable.preview.arg>
                <maven.compiler.target>1.8</maven.compiler.target>
                <maven.compiler.source>1.8</maven.compiler.source>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <configuration>
                            <release>${java.version}</release>
                        </configuration>
                    </plugin>
                    <plugin>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <argLine>-ea
                                --add-opens=messaging.util/messaging.util=ALL-UNNAMED
                                --add-opens=messaging.protos/messaging.protos.util=ALL-UNNAMED
                                --add-opens=messaging.protos/messaging.protos=ALL-UNNAMED
                                --add-opens=java.base/java.nio=ALL-UNNAMED
                                --add-opens=java.base/java.lang=ALL-UNNAMED
                            </argLine>
                            <testFailureIgnore>true</testFailureIgnore>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>jdk13</id>
            <activation>
                <jdk>13</jdk>
            </activation>
            <properties>
                <java.version>13</java.version>
                <enable.preview.arg>-ea</enable.preview.arg>
                <maven.compiler.target>13</maven.compiler.target>
                <maven.compiler.source>13</maven.compiler.source>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <configuration>
                            <release>${java.version}</release>
                        </configuration>
                    </plugin>
                    <plugin>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <argLine>-ea
                                --add-opens=messaging.util/messaging.util=ALL-UNNAMED
                                --add-opens=messaging.protos/messaging.protos.util=ALL-UNNAMED
                                --add-opens=messaging.protos/messaging.protos=ALL-UNNAMED
                                --add-opens=java.base/java.nio=ALL-UNNAMED
                                --add-opens=java.base/java.lang=ALL-UNNAMED
                            </argLine>
                            <testFailureIgnore>true</testFailureIgnore>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>jdk14</id>
            <activation>
                <jdk>14</jdk>
            </activation>
            <properties>
                <java.version>14</java.version>
                <enable.preview.arg>--enable-preview</enable.preview.arg>
                <maven.compiler.target>14</maven.compiler.target>
                <maven.compiler.source>14</maven.compiler.source>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <configuration>
                            <release>${java.version}</release>
                            <compilerArgs>
                                <arg>${enable.preview.arg}</arg>
                            </compilerArgs>
                        </configuration>
                    </plugin>
                    <plugin>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <argLine>-ea --enable-preview
                                --add-opens=messaging.util/messaging.util=ALL-UNNAMED
                                --add-opens=messaging.protos/messaging.protos.util=ALL-UNNAMED
                                --add-opens=messaging.protos/messaging.protos=ALL-UNNAMED
                                --add-opens=java.base/java.nio=ALL-UNNAMED
                                --add-opens=java.base/java.lang=ALL-UNNAMED
                            </argLine>
                            <testFailureIgnore>true</testFailureIgnore>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>jdk15</id>
            <activation>
                <jdk>16</jdk>
            </activation>
            <properties>
                <java.version>15</java.version>
                <enable.preview.arg>--enable-preview</enable.preview.arg>
                <maven.compiler.target>15</maven.compiler.target>
                <maven.compiler.source>15</maven.compiler.source>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <configuration>
                            <release>${java.version}</release>
                        </configuration>
                    </plugin>
                    <plugin>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <argLine>-ea 
                                --add-opens=messaging.util/messaging.util=ALL-UNNAMED
                                --add-opens=messaging.protos/messaging.protos.util=ALL-UNNAMED
                                --add-opens=messaging.protos/messaging.protos=ALL-UNNAMED
                                --add-opens=java.base/java.nio=ALL-UNNAMED
                                --add-opens=java.base/java.lang=ALL-UNNAMED
                            </argLine>
                            <testFailureIgnore>true</testFailureIgnore>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>        
        <profile>
            <id>jdk16</id>
            <activation>
                <jdk>16</jdk>
            </activation>
            <properties>
                <java.version>14</java.version>
                <enable.preview.arg>--enable-preview</enable.preview.arg>
                <maven.compiler.target>16</maven.compiler.target>
                <maven.compiler.source>16</maven.compiler.source>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <configuration>
                            <release>${java.version}</release>
                        </configuration>
                    </plugin>
                    <plugin>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <argLine>-ea 
                                --add-opens=messaging.util/messaging.util=ALL-UNNAMED
                                --add-opens=messaging.protos/messaging.protos.util=ALL-UNNAMED
                                --add-opens=messaging.protos/messaging.protos=ALL-UNNAMED
                                --add-opens=java.base/java.nio=ALL-UNNAMED
                                --add-opens=java.base/java.lang=ALL-UNNAMED
                            </argLine>
                            <testFailureIgnore>true</testFailureIgnore>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>        
    </profiles>
</project>





